avatar.tsx file

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -13,3 +13,15 @@
 /**
  * END --- SETUP TAILWINDCSS EDIT
  */
+@layeer base {
+
+}
+@layeer components {
+
+}
+@layeer utilities {
+  .center {
+    @apply flex justify-center items-center;
+  }
+
+}
