--- a/web/src/index.css
+++ b/web/src/index.css
@@ -19,7 +19,9 @@
   }
 }
 @layer components {
-
+  .indicator {
+    @apply center h-6 w-6 rounded-full border-2
+  }
 }
 @layer utilities {
   .center {
