--- a/web/src/index.css
+++ b/web/src/index.css
@@ -14,6 +14,9 @@
  * END --- SETUP TAILWINDCSS EDIT
  */
 @layer base {
+  main {
+    @apply z-10 relative mb-[350px] overflow-scroll
+  }
   label {
     @apply font-handwriting uppercase text-xl tracking-tighter
   }
