--- a/web/src/index.css
+++ b/web/src/index.css
@@ -61,6 +61,9 @@
   }
 }
 @layer components {
+  .inveted {
+    @apply center h-20 w-20 rounded-full border-2
+  }
   .field {
     @apply mb-4
   }
